--- a/templates/main.hbs
+++ b/templates/main.hbs
@@ -1,11 +1,11 @@
 {{! This adds the HTML head section and the beginning of the body. See content_top.hbs. }}
 {{> content_top }}
 
-<div class="col-md-8">
-    <article class="blog-post">
+<div >
+    <article >
         {{#with page.head}}
-        <h1 class="blog-post-title border-bottom">{{title}}</h2>
-            <p class="blog-post-meta">{{#if extra.date}}Published: {{extra.date}}{{/if}}</p>
+        <h2 >{{title}}</h2>
+            <p >{{#if extra.date}}Published: {{extra.date}}{{/if}}</p>
             {{/with}}
             {{! Since this is HTML, we use the triple-curly }}
             {{{page.body}}}
