--- a/themes/bromide/templates/content_bottom.hbs
+++ b/themes/bromide/templates/content_bottom.hbs
@@ -1,15 +1,12 @@
-<footer class="footer"><div class="container">
-  <span class="icon-text">
-  <span class="icon"><i class="fas fa-bandcamp"></i></span>
-  <span class="icon"><i class="fas fa-soundcloud"></i></span>
-  <span class="icon"><i class="fas fa-github-alt"></i></span>
-  <span class="icon"><i class="fas fa-gitlab"></i></span>
-  <span class="icon"><i class="fas fa-bitbucket"></i></span>
-  </span>
+<footer class="footer"><div class="content">
+
+    <span class="icon"><i class="fas fa-github-alt"></i></span>
+    <span class="icon"><i class="fas fa-gitlab"></i></span>
+
     {{#if site.info.extra.copyright }}
     <p>&copy; {{site.info.extra.copyright}}</p>
     {{/if}}
 </div></footer>
 
-</body>
-</html>
+</body></html>
+
