--- a/themes/bromide/templates/content_top.hbs
+++ b/themes/bromide/templates/content_top.hbs
@@ -2,8 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
+<link rel="stylesheet" href="/static/bulma.css" />
     {{! Use the formatter.title and formatter.description in the head }}
     <title>{{page.head.title}} | {{site.info.title}}</title>
     {{#if page.head.description}}
