--- a/themes/bromide/templates/hero.hbs
+++ b/themes/bromide/templates/hero.hbs
@@ -1,24 +1,6 @@
 {{> content_top}}
-<nav class="navbar is-primary"><div class="container">
-    <div class="navbar-brand"><p class="navbar-item">PEoP</p>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
-           data-target="navbarHero"
-           onclick="this.classList.toggle('is-active');document.querySelector('#'+this.dataset.target).classList.toggle('is-active');">
-
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        </a></div>
-    <div id="navbarHero" class="navbar-menu"><div class="navbar-end">
-        <a class="navbar-item is-active">Home</a>
-        <a class="navbar-item" href="/dev">Devlog</a>
-        <span class="navbar-item">
-            <a class="button is-primary is-inverted" href="{{page.head.extra.git}}">
-            <span class="icon"><i class="fab fa-github"></i></span><span>Git</span>
-            </a></span>
-        </div></div>
-    </div></nav>
-<section class="hero is-fullheight-with-navbar">
+{{> navbar }}
+<section class="hero is-fullheight-with-navbar ">
 <div class="hero-body"><div class="container has-text-centered">
 <p class="title">{{page.head.title}}</p>
 {{#if page.head.description}}
